<resources>
    <string name="app_name">Home Audio System</string>
    <string name="action_settings">Settings</string>
    <string name="newalbum_button">Add Album</string>
    <string name="newalbum_title_label">Title of album?</string>
    <string name="newalbum_name_label">Name of artist?</string>
    <string name="newalbum_genre_label">genre of album?</string>
    <string name="newalbum_date_label">Release date of album?</string>
    <string name="title_activity_create_location">CreateLocation</string>
    <string name="title_activity_add_album">AddAlbum</string>
    <string name="title_activity_manage_playlists">ManagePlaylists</string>
    <string name="title_activity_create_playlist">CreatePlaylist</string>
    <string name="title_activity_add_song_playlist">AddSongPlaylist</string>
</resources>
