<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.group01.homeaudiosystem.AddAlbum"
    tools:showIn="@layout/activity_add_album">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=" "
            android:textColor="#FF69b4"
            android:id="@+id/error"
            />

        <!-- Add album Section -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newalbum_title"
            android:hint="@string/newalbum_title_label" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newalbum_artistname"
            android:hint="@string/newalbum_name_label" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Genre:" />

                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_gravity="end"
                    android:id="@+id/newalbum_genrespinner"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_height="26dp"
                    android:layout_width="wrap_content"
                    android:text="Release Date: " />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/newalbum_date_label"
                    android:layout_gravity="end"
                    android:id="@+id/newalbum_date"
                    android:onClick="showDatePickerDialog" />
            </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newalbum_button"
            android:layout_gravity="end"
            android:onClick="addAlbum" />
        <!-- end Add album Section -->

        <!-- Add song Section -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newsong_title"
            android:hint="Song Name?" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:text="Duration: " />

                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:text="01:00"
                    android:id="@+id/newsong_duration"
                    android:onClick="showTimePickerDialog" />
            </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Song"
            android:layout_gravity="right"
            android:onClick="addSong"/>

        <TwoLineListItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TwoLineListItem>

    </LinearLayout>
</RelativeLayout>
